# snake_eyes

./: .gitignore  README.md  pyproject.toml  snakeeyes.py
samples/: example.cfg
snake_eyes/: __init__.py
